[package]
name = "glimmer"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-model = {version = "1.0.0", features = ["openai"]}
tokio = { version = "1", features = ["full"] }
adk-core = "1.0.0"
adk-runner = "1.0.0"
adk-rust = "1.0.0"
adk-session = "1.0.0"
anyhow = "1.0.102"
colored = "3.1.1"
dotenvy = "0.15.7"
futures = "0.3.32"
ratatui = "0.30.2"
